@@ -8,20 +8,19 @@ import static seedu.address.logic.Messages.MESSAGE_PERSONS_LISTED_OVERVIEW;
 import static seedu.address.logic.commands.CommandTestUtil.assertCommandSuccess;
 import static seedu.address.logic.commands.CommandTestUtil.assertParseFailure;
 import static seedu.address.logic.commands.CommandTestUtil.assertParseSuccess;
-import static seedu.address.testutil.TypicalPersons.CARL;
-import static seedu.address.testutil.TypicalPersons.ELLE;
-import static seedu.address.testutil.TypicalPersons.FIONA;
 import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
+import static seedu.address.testutil.TypicalPersons.getTypicalPersons;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
-import seedu.address.model.person.PersonMatchesKeywordsPredicate;
+import seedu.address.model.person.Person;
+import seedu.address.model.person.PersonMatchesQueryPredicate;
 
 /**
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
@@ -30,13 +29,12 @@ public class FindCommandTest {
 
     private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
     private final Model expectedModel = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final List<Person> personsList = getTypicalPersons();
 
     @Test
     public void equals() {
-        PersonMatchesKeywordsPredicate firstPredicate =
-                new PersonMatchesKeywordsPredicate(Collections.singletonList("first"));
-        PersonMatchesKeywordsPredicate secondPredicate =
-                new PersonMatchesKeywordsPredicate(Collections.singletonList("second"));
+        Predicate<Person> firstPredicate = new PersonPredicateStub(false);
+        Predicate<Person> secondPredicate = new PersonPredicateStub(true);
 
         FindCommand findFirstCommand = new FindCommand(firstPredicate);
         FindCommand findSecondCommand = new FindCommand(secondPredicate);
@@ -59,23 +57,24 @@ public class FindCommandTest {
     }
 
     @Test
-    public void execute_zeroKeywords_noPersonFound() {
+    public void execute_stubThatReturnsFalse_noPersonFound() {
         String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        PersonMatchesKeywordsPredicate predicate = preparePredicate(" ");
+        Predicate<Person> predicate = new PersonPredicateStub(false);
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Collections.emptyList(), model.getFilteredPersonList());
+        assertEquals(List.of(), model.getFilteredPersonList());
     }
 
     @Test
-    public void execute_multipleKeywords_multiplePersonsFound() {
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3);
-        PersonMatchesKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
+    public void execute_stubThatReturnsTrue_allPersonsFound() {
+        PersonPredicateStub predicate = new PersonPredicateStub(true);
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
+
+        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, personsList.size());
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(List.of(CARL, ELLE, FIONA), model.getFilteredPersonList());
+        assertEquals(personsList, model.getFilteredPersonList());
     }
 
     @Test
@@ -86,28 +85,48 @@ public class FindCommandTest {
 
     @Test
     public void of_validArgs_returnsFindCommand() {
+        // this test depends on the PersonMatchesQueryPredicate class in order to test the factory constructor of()
+
         // no leading and trailing whitespaces
-        FindCommand expectedFindCommand =
-                new FindCommand(new PersonMatchesKeywordsPredicate(List.of("Alice", "Bob")));
+        FindCommand expectedFindCommand = new FindCommand(new PersonMatchesQueryPredicate("Alice Bob"));
         assertParseSuccess(FindCommand::of, "Alice Bob", expectedFindCommand);
 
         // multiple whitespaces between keywords
         assertParseSuccess(FindCommand::of, " \n Alice \n \t Bob  \t", expectedFindCommand);
     }
 
-    @Test
-    public void toStringMethod() {
-        PersonMatchesKeywordsPredicate predicate = new PersonMatchesKeywordsPredicate(List.of("keyword"));
-        FindCommand findCommand = new FindCommand(predicate);
-        String expected = FindCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
-        assertEquals(expected, findCommand.toString());
-    }
-
     /**
-     * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
+     * Represents a predicate stub class for testing the FindCommand class.
+     * Removes the dependency on the PersonMatchesQueryPredicate class.
      */
-    private PersonMatchesKeywordsPredicate preparePredicate(String userInput) {
-        return new PersonMatchesKeywordsPredicate(List.of(userInput.split("\\s+")));
+    private static class PersonPredicateStub implements Predicate<Person> {
+
+        private final boolean returnValue;
+
+        public PersonPredicateStub(boolean returnValue) {
+            this.returnValue = returnValue;
+        }
+
+        @Override
+        public boolean test(Person person) {
+            return returnValue;
+        }
+
+        @Override
+        public boolean equals(Object other) {
+            if (other == this) {
+                return true;
+            }
+
+            // instanceof handles nulls
+            if (!(other instanceof PersonPredicateStub)) {
+                return false;
+            }
+
+            PersonPredicateStub otherFindCommand = (PersonPredicateStub) other;
+            return returnValue == otherFindCommand.returnValue;
+        }
+
     }
 
 }
